--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -9,3 +9,4 @@
 <p role="status">My Current count: @CurrentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="Save">Save</button>
