--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -10,3 +10,4 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 <button class="btn btn-primary" @onclick="DropBoxSave">Drop Box Save</button>
+<button class="btn btn-primary" @onclick="Save">Save</button>
