--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -8,6 +8,9 @@
 
 <p role="status">My Current count: @CurrentCount</p>
 
+<img src="https://dl.dropboxusercontent.com/scl/fi/l867c105n0epv972h16vv/dessert5.jpg?rlkey=d6yiese7ddy2awpk9p14ihztb&dl=0"
+    width="300" height="200" />
+
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 <button class="btn btn-primary" @onclick="DropBoxSave">Drop Box Save</button>
 <button class="btn btn-primary" @onclick="Save">Save</button>
