--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -4,19 +4,105 @@
 
 <PageTitle>Dessert Rate</PageTitle>
 
-<h1>Dessert Rate</h1>
+<PageTitle>Rankings</PageTitle>
+
+<div class="p-2 sticky-top action-bar">
+    <div class="d-flex flex-row align-items-center">
+        <div>
+            <span class="title-text">Sort By:&nbsp;</span>
+        </div>
+        <div>
+            <button class="btn btn-sm btn-primary" type="button" @onclick="ClickSortID"><span class="display-6">
+                    Dessert #</span></button>
+        </div>
+        <div class="ms-2">
+            <button class="btn btn-sm btn-primary" type="button" @onclick="ClickSortRank"><span class="display-6">
+                    Rank</span></button>
+        </div>
+    </div>
+</div>
+
+<div class="mt-2 mb-4">
+    <div class="display-7 title-text">Rank Desserts (1 = Favorite, @RatingModel.ratingRows.Count = Least Favorite)</div>
+    <EditForm action="https://formspree.io/f/xnqkkalq" OnValidSubmit="@HandleValidSubmit" method="POST"
+        Model="@RatingModel">
+        <input type="text" name="email" @bind-value="@Email">
+        <textarea style="visibility: visible" name="message">
+            @Message
+        </textarea>
+
+        <ul class="mt-4 list-group">
 
 
-<img src="https://dl.dropboxusercontent.com/scl/fi/l867c105n0epv972h16vv/dessert5.jpg?rlkey=d6yiese7ddy2awpk9p14ihztb&dl=0"
-    width="300" height="200" />
+            @foreach (var item in RatingModel.GetRatingRows())
+            {
+                <li class="mb-2 list-group-item">
+                    <div class="d-flex flex-row align-items-center">
+                        <div>
+                            <div class="h6 title-text">@item.dessertID</div>
+                            <img src="@item.imageURL" class="dessert-image rounded" alt="image1" title="image1" />
+                        </div>
+                        <div class="ms-4">
+                            <label>
+                                <div>Rank:</div>
+                                <InputNumber id="value" readonly @bind-Value="item.ranking" class="rank-input rounded"
+                                    min="1" max="@RatingModel.ratingRows.Count" />
+                            </label>
+                        </div>
+                        <div class="ms-4">
+                            <div>&nbsp;</div>
+                            <div>
+                                <button type="button" class="btn btn-primary" @onclick="@((e)=>ClickPlus(item))"><span
+                                        class="display-6">&#9650;</span></button>
+                            </div>
+                            <div class="mt-1">
+                                <button type="button" class="btn btn-primary" @onclick="@((e)=>ClickMinus(item))"><span
+                                        class="display-6">&#9660;</span></button>
+                            </div>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+                        </div>
+                    </div>
+                </li>
+            }
+        </ul>
+
+        <div class="d-flex justify-content-center">
+            @if (RatingModel.valid)
+            {
+                <div>
+                    <DataAnnotationsValidator />
+                    <ValidationSummary />
+                    <div class="mt-4 mb-4">
+                        <label><span class="title-text">Name:</span>
+                            <InputText id="name" @bind-Value="Name" @oninput="@OnChangeName" placeholder="Type your name"
+                                maxLength="30" />
+                        </label>
+                    </div>
+                    <button class="btn btn-success" type="submit"><span class="display-5">Save</span></button>
+                    <button disabled="@GetSubmitDisabled()" class="btn btn-primary" type="submit">Vote!</button>
+
+                </div>
+            }
+            else
+            {
+                <div class="alert alert-warning" role="alert">
+                    <div>You have a duplicate rank somewhere so you cannot save.</div>
+                    <div>Try sorting by rank to help.</div>
+                </div>
+            }
+        </div>
+    </EditForm>
+
+</div>
+
+
+@* <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 <input type="text" name="name" @oninput="@OnChangeName" @bind-value="@Name">
 <form action="https://formspree.io/f/xnqkkalq" method="POST">
-    <input type="hidden" name="email" @bind-value="@Email">
-    <textarea style="visibility: hidden" name="message">
-        @Message
-        </textarea>
-    <button disabled="@GetSubmitDisabled()" class="btn btn-primary" type="submit">Vote!</button>
-</form>
+<input type="hidden" name="email" @bind-value="@Email">
+<textarea style="visibility: hidden" name="message">
+@Message
+</textarea>
+<button disabled="@GetSubmitDisabled()" class="btn btn-primary" type="submit">Vote!</button>
+</form> *@
