--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -26,10 +26,6 @@
     <div class="display-7 title-text">Rank Desserts (1 = Favorite, @RatingModel.ratingRows.Count = Least Favorite)</div>
     <EditForm action="https://formspree.io/f/xnqkkalq" OnValidSubmit="@HandleValidSubmit" method="POST"
         Model="@RatingModel">
-        <input type="text" name="email" @bind-value="@Email">
-        <textarea style="visibility: visible" name="message">
-            @Message
-        </textarea>
 
         <ul class="mt-4 list-group">
 
@@ -79,7 +75,7 @@
                         </label>
                     </div>
                     <button class="btn btn-success" type="submit"><span class="display-5">Save</span></button>
-                    <button disabled="@GetSubmitDisabled()" class="btn btn-primary" type="submit">Vote!</button>
+                    @* <button disabled="@GetSubmitDisabled()" class="btn btn-primary" type="submit">Vote!</button> *@
 
                 </div>
             }
@@ -95,14 +91,13 @@
 
 </div>
 
-
-@* <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
-<input type="text" name="name" @oninput="@OnChangeName" @bind-value="@Name">
-<form action="https://formspree.io/f/xnqkkalq" method="POST">
-<input type="hidden" name="email" @bind-value="@Email">
-<textarea style="visibility: hidden" name="message">
-@Message
-</textarea>
-<button disabled="@GetSubmitDisabled()" class="btn btn-primary" type="submit">Vote!</button>
-</form> *@
+@* <input type="text" name="name" @oninput="@OnChangeName" @bind-value="@Name"> *@
+<div class="d-flex justify-content-center">
+    <form action="https://formspree.io/f/xnqkkalq" method="POST">
+        <input type="hidden" name="email" @bind-value="@Email">
+        <textarea style="visibility: hidden" name="message">
+            @Message
+    </textarea>
+        <button disabled="@GetSubmitDisabled()" class="btn btn-primary btn-lg" type="submit">Vote!</button>
+    </form>
+</div>
