--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -24,11 +24,10 @@
 
 <div class="mt-2 mb-4">
     <div class="display-7 title-text">Rank Desserts (1 = Favorite, @RatingModel.RatingRows.Count = Least Favorite)</div>
-    <EditForm OnValidSubmit="@HandleValidSubmit" method="POST" Model="@RatingModel">
+    <EditForm action="https://formspree.io/f/xnqkkalq" OnValidSubmit="@HandleValidSubmit" method="POST"
+        Model="@RatingModel">
 
         <ul class="mt-4 list-group">
-
-
             @foreach (var item in RatingRows)
             {
                 <li class="mb-2 list-group-item">
