--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -24,7 +24,7 @@
 
 <div class="mt-2 mb-4">
     <div class="display-7 title-text">Rank Desserts (1 = Favorite, @RatingModel.RatingRows.Count = Least Favorite)</div>
-    <EditForm action="https://formspree.io/f/xnqkkalq" OnValidSubmit="@HandleValidSubmit" method="POST"
+    <EditForm action="https://formspree.io/f/xzzbaajv" OnValidSubmit="@HandleValidSubmit" method="POST"
         Model="@RatingModel">
 
         <ul class="mt-4 list-group">
@@ -92,7 +92,7 @@
 
 @* <input type="text" name="name" @oninput="@OnChangeName" @bind-value="@Name"> *@
 <div class="d-flex justify-content-center">
-    <form action="https://formspree.io/f/xnqkkalq" method="POST">
+    <form action="https://formspree.io/f/xzzbaajv" method="POST">
         <input type="hidden" name="email" @bind-value="@Email">
         <textarea style="visibility: hidden" name="message">
             @Message
