functioning on static domains

--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -41,7 +41,7 @@
                             <label>
                                 <div>Rank:</div>
                                 <InputNumber id="value" @bind-Value="item.Ranking" class="rank-input rounded" min="1"
-                                    max="@RatingModel.RatingRows.Count" @key="item.DessertID" />
+                                    max="@RatingModel.RatingRows.Count" @key="item.DessertID" style="width:60px" />
                             </label>
                         </div>
                         <div class="ms-4">
