--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -4,6 +4,9 @@
 
 <PageTitle>Dessert Rate</PageTitle>
 
+<div class="d-flex flex-row justify-content-center">
+    <sup>Brownies (11/28/24)</sup>
+</div>
 <div class="p-2 sticky-top action-bar" style="background-color: white">
     <div class="d-flex flex-row align-items-center">
         <div>
@@ -21,9 +24,7 @@
 </div>
 
 <div class="mt-2 mb-4">
-    <div class="display-7 title-text">Rank Desserts (1 = Favorite, @RatingModel.RatingRows.Count = Least Favorite)
-        <small>v1.0.3</small>
-    </div>
+    <div class="display-7 title-text">Rank Desserts (1 = Favorite, @RatingModel.RatingRows.Count = Least Favorite)</div>
     <EditForm OnValidSubmit="@HandleValidSubmit" method="POST" Model="@RatingModel">
         <ul class="mt-4 list-group">
             @foreach (var row in RatingRows)
