--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -25,7 +25,7 @@
 
 <div class="mt-2 mb-4">
     <div class="display-7 title-text">Rank Desserts (1 = Favorite, @RatingModel.RatingRows.Count = Least Favorite)</div>
-    <EditForm OnValidSubmit="@HandleValidSubmit" method="POST" Model="@RatingModel">
+    <EditForm method="POST" Model="@RatingModel">
         <ul class="mt-4 list-group">
             @foreach (var row in RatingRows)
             {
@@ -93,7 +93,6 @@
 
 </div>
 
-@* <input type="text" name="name" @oninput="@OnChangeName" @bind-value="@Name"> *@
 <div class="d-flex justify-content-center">
 
     <form @ref="ExternalForm" action="https://formkeep.com/f/b7297b9b267f" method="POST">
