--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -2,7 +2,7 @@
 @inherits CounterBase
 @namespace DessertRate.Pages
 
-<PageTitle>Dessert Rate</PageTitle>
+<PageTitle>Dessert Rate 2025</PageTitle>
 
 <div class="d-flex flex-row justify-content-center">
     <sup>Tart (11/27/25)</sup>
